[metadata]
name = elastio_inspector
version = 0.2.0
author = Vihar Chokshi
author_email = vc@iot4.net
description = Inspects the Elastio Installation
long_description = file: README.md
long_description_content_type = text/markdown
urlr = https://github.com/elastio/contrib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7.0
package_dir = 
    = src
packages = find:
install_requires =
    boto3
    botocore

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    elastio_inspector = elastio_inspector.main:main

[isort]
ensure_newline_before_comments = True
include_trailing_comma = True
force_to_top = True
use_parentheses = True
line_length = 88
wrap_length = 88
multi_line_output = 3
force_grid_wrap = 0

[flake8]
max-line-length = 88

[tox]
minversion = 3.4.0

[tox:tox]
envlist = 3.6.0, 3.7.0, 3.8.0

[testenv]
platform = linux
deps = 
    pytest
    coverage
    moto[all]
    isort
    black
    flake8
commands = 
    isort .
    black .
    flake8 .
    coverage run -m pytest
